--- a/example.html
+++ b/example.html
@@ -15,6 +15,7 @@
 
     <div id="info">Выберите файл с тестами</div>
     <button id="randomBtn" type="button">Пройти случайные 5 вопросов</button>
+    <button id="loadPresetBtn" type="button">Загрузить базовый тест</button>
 
     <script type="module" src="js/app.js"></script>
 
